@@ -12,6 +12,8 @@ Nagios 3.x Change Log
 * Configure script option bug fixes for cygwin and embedded perl
 * Added buffer stats and check statistics to performance information in extinfo CGI
 * Hostgroup and servicegroup definitions now have notes, notes_url, and action_url directives
+* Patch for incorrect time down percentage in availability CGI
+* Host/service plugin output and perfdata should now be HTML escaped in CGIs
 * Documentation updates
 
 
